--- a/packages/main-package/pyproject.toml
+++ b/packages/main-package/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "core-package",
 ]
 
+[tool.uv.sources]
+core-package = { path = "../core-package/" }
+
 [build-system]
 requires = ["uv_build>=0.7.20,<0.8"]
 build-backend = "uv_build"
